fix alignment error when amount of properties do not match amount of columns

--- a/frontend/Components/ListingCard/ListingCard.module.css
+++ b/frontend/Components/ListingCard/ListingCard.module.css
@@ -1,5 +1,7 @@
 .container {
-  width: 350px;
+  min-width: 350px;
+  max-width: 400px;
+  margin: 1em;
 }
 
 .content {
