--- a/frontend/Components/ListingContainer/ListingContainerStyles.module.css
+++ b/frontend/Components/ListingContainer/ListingContainerStyles.module.css
@@ -1,6 +1,8 @@
 .listingContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 2em;
-  justify-content: space-between;
+}
+
+.flexFiller {
+  flex-grow: 1;
 }
